<resources>
    <string name="app_name">RasPiCar</string>

    <string name="settings">Settings</string>
    <string name="serverIp">Server IP</string>
    <string name="systemStarted">System started</string>

    <string name="buttonSetUp">Start up pi</string>
    <string name="buttonUp">Up</string>
    <string name="buttonDown">Down</string>
    <string name="buttonLeft">Left</string>
    <string name="buttonRight">Right</string>
</resources>
