<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.ohravaara.raspicar.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/trump2"
            android:scaleType="centerCrop"
            android:id="@+id/backgroundImage" />
    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSetUp"
        android:text="@string/buttonSetUp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDown"
        android:text="@string/buttonDown"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonUp"
        android:text="@string/buttonUp"
        android:layout_above="@id/buttonDown"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLeft"
        android:text="@string/buttonLeft"
        android:layout_toLeftOf="@id/buttonDown"
        android:layout_toStartOf="@id/buttonDown"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRight"
        android:text="@string/buttonRight"
        android:layout_toRightOf="@id/buttonDown"
        android:layout_toEndOf="@id/buttonDown"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
